--- a/src/rom/opllall.cfg
+++ b/src/rom/opllall.cfg
@@ -26,6 +26,10 @@ SEGMENTS {
 	BSS:		load = SRAM,            type = bss, define = yes;
 	HEAP:		load = SRAM,            type = bss, optional = yes;
 	ZEROPAGE:	load = ZP,              type = zp;
+
+	PRG_AUDIO_CODE:		load = ROM0,            type = ro,  define = yes;
+	PRG_AUDIO_DATA:		load = ROM,             type = ro,  define = yes;
+	ZEROPAGE_S:			load = ZP,              type = zp;
 }
 
 FEATURES {
