--- a/src/nsd/Makefile
+++ b/src/nsd/Makefile
@@ -88,7 +88,7 @@ PROJ_LIST =	$(PROJ).lib		\
 #;	Define option
 #---------------------------------------
 
-AMOD  = -D AUTO_GROOVE -D ENV_NOTE_ABS -D ENVELOPE_MODE
+AMOD  = -D AUTO_GROOVE -D ENV_NOTE_ABS -D ENVELOPE_MODE -D FDS_SYNC
 
 ASE   = -D SE $(AMOD)
 AFDS  = -D FDS $(AMOD)
