N163=n で使うトラック数を指定するようにした（使用RAM削減用途）

--- a/src/rom/Makefile
+++ b/src/rom/Makefile
@@ -80,14 +80,14 @@ AVRC6 = -D VRC6 $(AMOD)
 AVRC7 = -D VRC7 $(AMOD)
 AOPLL = -D OPLL $(AMOD)
 AMMC5 = -D MMC5 $(AMOD)
-AN163 = -D N163 $(AMOD)
+AN163 = -D N163=8 $(AMOD)
 APSG  = -D PSG $(AMOD)
 
-AHFE4 =         -D VRC6         -D VRC7 -D MMC5 -D N163 -D PSG -D NULL -D DPCMBank -D HFE4 $(AMOD)
-AALL  =         -D VRC6         -D VRC7 -D MMC5 -D N163 -D PSG -D NULL -D DPCMBank $(AMOD)
-AOALL =         -D VRC6 -D OPLL         -D MMC5 -D N163 -D PSG -D NULL -D DPCMBank $(AMOD)
-AALL2 = -D FDS  -D VRC6         -D VRC7 -D MMC5 -D N163 -D PSG -D NULL -D DPCMBank $(AMOD)
-AHFX4 = -D FDS  -D VRC6 -D OPLL -D VRC7 -D MMC5 -D N163 -D PSG -D NULL -D DPCMBank -D HFX4 $(AMOD)
+AHFE4 =         -D VRC6         -D VRC7 -D MMC5 -D N163=8 -D PSG -D NULL -D DPCMBank -D HFE4 $(AMOD)
+AALL  =         -D VRC6         -D VRC7 -D MMC5 -D N163=8 -D PSG -D NULL -D DPCMBank $(AMOD)
+AOALL =         -D VRC6 -D OPLL         -D MMC5 -D N163=8 -D PSG -D NULL -D DPCMBank $(AMOD)
+AALL2 = -D FDS  -D VRC6         -D VRC7 -D MMC5 -D N163=8 -D PSG -D NULL -D DPCMBank $(AMOD)
+AHFX4 = -D FDS  -D VRC6 -D OPLL -D VRC7 -D MMC5 -D N163=8 -D PSG -D NULL -D DPCMBank -D HFX4 $(AMOD)
 
 
 $(PROJ_SE).bin :	ASFLAGS += $(ASE)
