n163 で se を使わないときは SE_N163_Track を 0 に 信号送出コマンドを常に使えるように

--- a/src/nsd/Makefile
+++ b/src/nsd/Makefile
@@ -88,7 +88,7 @@ PROJ_LIST =	$(PROJ).lib		\
 #;	Define option
 #---------------------------------------
 
-AMOD  = -D AUTO_GROOVE -D ENV_NOTE_ABS -D ENVELOPE_MODE -D FDS_SYNC
+AMOD  = -D AUTO_GROOVE -D ENV_NOTE_ABS -D ENVELOPE_MODE -D FDS_SYNC -D SEND_SIGNAL
 
 ASE   = -D SE $(AMOD)
 AFDS  = -D FDS $(AMOD)
